--- a/WebDevBootcamp/Patatap Clone/main.css
+++ b/WebDevBootcamp/Patatap Clone/main.css
@@ -2,9 +2,7 @@
 	height: 100%;
 	width: 100%;
 	border: 1px solid red;
-	background-color: "black";
-	/*margin-left: 100px;
-	margin-top: 100px;*/
+	background-color: black;	
 }
 
 body, html {
