initial layout complete

--- a/WebDevBootcamp/YelpCamp/views/partials/header.ejs
+++ b/WebDevBootcamp/YelpCamp/views/partials/header.ejs
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <title>YelpCamp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../public/stylesheets/app.css">
 </head>
 <body>
-  
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container">
+        <a href="/" class="navbar-brand">YelpCamp</a>
+      
+     
+        <div class="navbar-nav">
+          <a href="/" class="nav-link nav-item">Login</a>
+          <a href="/" class="nav-link nav-item">Logout</a>
+          <a href="/" class="nav-link nav-item">Sign Up</a>
+        </div>
+      
+      </div>
+    
+        
+  </nav>
