--- a/WebDevBootcamp/YelpCamp/views/campgrounds.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds.ejs
@@ -1,13 +1,40 @@
 <% include partials/header.ejs %>
 
-<h1>This is the campgrounds page</h1>
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Welcome to YelpCamp</h1>
+            <p>View our exquisite collection of campgrounds from all over the world</p>
+            <p>
+                <a class="btn btn-primary" href="/campgrounds/new">Add New Campground</a>
 
-<% campgrounds.forEach((campground) => { %>
-    <div>
-        <h4> <%= campground.name %> </h4>
-        <img src="<%= campground.image %>">
+            </p>
+        </div>        
+    </header>
+
+    <br>
+
+    <div class="row">
+       
+    
+        <% campgrounds.forEach((campground) => { %>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail card">
+                    <img class="img-thumbnail card-img-top" src="<%= campground.image %>">
+                    <div class="card-body">
+                        <p class="card-text  text-center">
+                            <%= campground.name %>
+                        </p>
+                    </div>
+                </div>
+                
+                    
+            </div>
+
+        <% }) %>
+
     </div>
 
-<% }) %>
+</div>
 
 <% include partials/footer.ejs %>
