--- a/WebDevBootcamp/YelpCamp/views/new.ejs
+++ b/WebDevBootcamp/YelpCamp/views/new.ejs
@@ -11,6 +11,9 @@
         <input class="form-control col-6" type="text" placeholder="Image url" name="image">
     </div>
     <div class="form-group row justify-content-center">
+        <input class="form-control col-6" type="text" placeholder="description" name="description">
+    </div>
+    <div class="form-group row justify-content-center">
         <button class="btn btn-success btn-block col-6">Submit</button>
     </div>
     <div class="row justify-content-center">
