--- a/WebDevBootcamp/YelpCamp/views/show.ejs
+++ b/WebDevBootcamp/YelpCamp/views/show.ejs
@@ -12,5 +12,9 @@
     </p>
 </div>
 
-
+<% campground.comments.forEach((comment) => { %>
+    <p>
+        <strong><%= comment.author %></strong> - <%= comment.text %>
+    </p>
+<% }); %>
 <% include partials/footer.ejs %>
