--- a/WebDevBootcamp/YelpCamp/views/campgrounds/new.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
 
 <div class="container">
   <h1 style="margin: 50px auto 50px auto; text-align: center">Create a new campground</h1>
@@ -27,4 +27,4 @@
 </div>
     
 
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
