--- a/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -1,31 +1,59 @@
 <% include ../partials/header.ejs %>
+<br>
 
 <div class="container">
-    <h1>
-        <%= campground.name %>
-    </h1>
-
-    <img src="<%= campground.image %>">
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">YelpCamp</p>
+            <div class="list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="<%= campground.image %>">
+                <div class="card-body figure-caption">
+                    <h4 class="card-title d-inline-block">
+                        <a href="#">
+                            <%= campground.name %>
+                        </a>
+                    </h4>
+                    <h4 class="d-inline-block float-right">$9.00/night</h4>
+                    <p class="text-center">
+                        <%= campground.description %>
+                    </p>
+                </div>
+            </div>
+            <div class="card text-light bg-secondary">
+                <div class="card-body">
+                    <a class="btn btn-success float-right" href="/campgrounds/<%= campground._id %>/comments/new">
+                        Add new Comment
+                    </a>
+                </div>
+                <% campground.comments.forEach((comment) => { %>
+                    <ul class="list-group">
+                        <li class="list-group-item text-light bg-secondary">
+                            <strong><%= comment.author %></strong>
+                            <span class="float-right">10 days ago</span>
+                            <p>
+                                <%= comment.text %>
+                            </p>
+                        </li>
+                    </ul>
+                    <% }); %>
+            </div>
+        </div>
+    </div>
+    
 
     <p>
-        <%= campground.description %>
-    </p>
-
-    <p>
-        <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">
-            Add new Comment
-        </a>
+        
     </p>
 
 
-    <% campground.comments.forEach((comment) => { %>
-        <p>
-            <strong>
-                <%= comment.author %>
-            </strong> -
-            <%= comment.text %>
-        </p>
-        <% }); %>
+    
 </div>
 
 
