completed user auth when addig camps

--- a/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -24,6 +24,11 @@
                     <p class="text-center">
                         <%= campground.description %>
                     </p>
+                    <p>
+                        <em>Submitted by:
+                            <%=campground.author.username %>
+                        </em>
+                    </p>
                 </div>
             </div>
             <div class="card text-light bg-secondary">
