--- a/WebDevBootcamp/YelpCamp/views/partials/header.ejs
+++ b/WebDevBootcamp/YelpCamp/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>YelpCamp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../../public/stylesheets/app.css"> -->
+    <link rel="stylesheet" href="/stylesheets/app.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
