--- a/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -52,6 +52,10 @@
                             <p>
                                 <%= comment.text %>
                             </p>
+                            <a href="/campgrounds/<%= campground._id %>/comments/<%=comment._id%>/edit"
+                                 class="btn btn-xs btn-warning">
+                                Edit
+                                </a>
                         </li>
                     </ul>
                     <% }); %>
