--- a/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/WebDevBootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -31,7 +31,7 @@
                     </p>
                     <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
                         <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
-                        <form id="deleteForm" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                        <form class="deleteForm" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                             <button class="btn btn-danger">Delete</button>
                         </form>
                     <% } %>
@@ -55,7 +55,10 @@
                             <a href="/campgrounds/<%= campground._id %>/comments/<%=comment._id%>/edit"
                                  class="btn btn-xs btn-warning">
                                 Edit
-                                </a>
+                            </a>
+                            <form class="deleteForm" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                <button class="btn btn-danger">Delete</button>
+                            </form>
                         </li>
                     </ul>
                     <% }); %>
